[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/GUI.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 2, 2 )

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.320313, 0.320313, 0.320313, 1 )
metallic = 1.0
roughness = 0.1

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 1, 0.185155 )

[node name="VRGUI" type="Spatial"]
script = ExtResource( 1 )

[node name="GUI_Mesh" type="MeshInstance" parent="."]
transform = Transform( -1, 8.74228e-08, 0, 8.74228e-08, 1, 8.74228e-08, 7.64274e-15, 8.74228e-08, -1, 0, 0, -0.1 )
mesh = SubResource( 1 )

[node name="GUI_Board" type="MeshInstance" parent="."]
transform = Transform( 1.1, 0, 0, 0, 1.1, 0, 0, 0, 0.05, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="StaticBody" type="StaticBody" parent="GUI_Board"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00727934, 0.0270869, 0 )

[node name="CollisionShape" type="CollisionShape" parent="GUI_Board/StaticBody"]
shape = SubResource( 4 )

[node name="GUI" type="Viewport" parent="."]
size = Vector2( 800, 800 )
transparent_bg = true
hdr = false
usage = 1
render_target_v_flip = true
gui_snap_controls_to_pixels = false

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.575873 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.286241 )
shape = SubResource( 5 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
